--- a/.env.example
+++ b/.env.example
@@ -53,4 +53,4 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 API_KEY_HERE=
 BASE_URL_HERE_ROUTING=https://router.hereapi.com/v8/routes
-BASE_URL_HERE_SEARCH=https://discover.search.hereapi.com/v1/discover
+BASE_URL_HERE_SEARCH=https://autosuggest.search.hereapi.com/v1/autosuggest
