--- a/.env.example
+++ b/.env.example
@@ -54,3 +54,10 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 API_KEY_HERE=
 BASE_URL_HERE_ROUTING=https://router.hereapi.com/v8/routes
 BASE_URL_HERE_SEARCH=https://autosuggest.search.hereapi.com/v1/autosuggest
+
+MAPBOX_ACCESS_TOKEN=
+
+MIX_MAPBOX_ACCESS_TOKEN="${MAPBOX_ACCESS_TOKEN}"
+
+BASE_URL_INEGI=https://gaia.inegi.org.mx/sakbe_v3.1
+API_KEY_INEGI=
